review findings